tenth commit... change font color in HDMI sheet

--- a/platforms/android/res/values/strings.xml
+++ b/platforms/android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Hyeseung_BandCalc</string>
+    <string name="app_name">BandCalc_ADT</string>
 </resources>
